# pe-format2

./: .gitignore  Makefile.am  configure.ac  pe-exec.desktop.in  pe-format2-conf.sh.in  pe-format2-setup.in  pe-format2.conf.in
openrc/: pe-format.init.in
systemd/: pe-format2.path.in  pe-format2.service.in
